# Multimodal-AI-Intelligence-Platform

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.worker  Dockerfile.worker.prod  README.md  entrypoint.sh  fly.toml  fly.worker.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14d4db207c85_add_extracted_text_to_documents.py  65c855c118a4_create_users_table.py  773c4dcc93fd_create_document_chunks_table.py  7a6061027b88_create_documents_table.py  a1c4e0d9b8f1_add_summary_columns_to_documents.py  a2f9e6d1c8b3_add_chat_model_to_users.py  b9e2c1f3a4d5_user_verification_and_reset_codes.py  c5d7e2a9b1f4_add_first_last_name_to_users.py  d8a3f1c2e9b5_add_error_message_to_documents.py  e7b4a2d8c1f9_add_chat_settings_to_users.py  f3c8d1a7b2e4_create_chats_tables.py
backend/app/: main.py
backend/app/agents/: __init__.py  chat_summary.py  chat_workflow.py  intent_router.py  models.py  summarization.py  verification.py
backend/app/api/: health.py  metrics.py  router.py
backend/app/auth/: blocklist.py  deps.py  lockout.py  models.py  passwords.py  router.py  schemas.py  security.py
backend/app/chats/: models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  logging.py  metrics.py  middleware.py  rate_limit.py  security_headers.py  tracing.py
backend/app/db/: session.py
backend/app/documents/: chunks_model.py  models.py  router.py  schemas.py  service.py  validation.py
backend/app/email/: client.py  templates.py
backend/app/embeddings/: __init__.py
backend/app/graph/: alignment.py  extraction.py  neo4j_client.py  router.py  schema.py  semantic_alignment.py
backend/app/rag/: graph_expansion.py  groq_chat.py  openrouter.py  prompts.py  reranker.py  retrieval.py  router.py  schemas.py  snippet.py  sparse.py  tavily.py
backend/app/storage/: __init__.py  minio_client.py  qdrant_client.py
backend/app/transcription/: whisper.py
backend/app/video/: describe.py
backend/app/vision/: describe.py
backend/app/workers/: chunking.py  config.py  embeddings.py  main.py  queue.py  tasks.py
backend/app/workers/ocr/: engines.py  pipeline.py
backend/app/workers/video/: audio.py  frames.py
backend/evals/: README.md  dataset.jsonl  metrics.py  run_eval.py
backend/evals/corpus/: kafka-overview.txt  observability.txt  postgres-mvcc.txt  react-hooks.txt
backend/scripts/: migrate_kg_alignment.py  migrate_kg_embeddings.py
backend/tests/: conftest.py  test_agents_chat_summary.py  test_agents_chat_workflow.py  test_agents_intent_router.py  test_agents_models.py  test_agents_summarization.py  test_agents_verification.py  test_app_factory.py  test_auth_blocklist.py  test_auth_lockout.py  test_auth_passwords.py  test_auth_schemas.py  test_auth_security.py  test_chats_search.py  test_chunking.py  test_config.py  test_core_observability.py  test_core_tracing.py  test_documents_validation.py  test_email_client.py  test_embeddings.py  test_evals_metrics.py  test_graph_alignment.py  test_graph_extraction.py  test_graph_schema.py  test_graph_semantic_alignment.py  test_health.py  test_ocr_pipeline.py  test_rag_diversify.py  test_rag_graph_expansion.py  test_rag_groq_chat.py  test_rag_openrouter.py  test_rag_prompts.py  test_rag_reranker.py  test_rag_snippet.py  test_rag_streaming.py  test_rag_tavily.py  test_security_headers.py  test_transcription.py  test_video_describe.py  (+2 more)
backend/tests/integration/: conftest.py  test_audio_flow.py  test_auth_flow.py  test_chat_flow.py  test_chats_flow.py  test_chunks_flow.py  test_documents_flow.py  test_graph_flow.py  test_image_flow.py  test_infra.py  test_ocr_flow.py  test_settings_flow.py  test_worker_failure.py
docs/: deploy.md
e2e/: auth-helpers.ts  auth.spec.ts  chat.spec.ts  chats.spec.ts  documents.spec.ts  embeddings.spec.ts  graph.spec.ts  health.spec.ts  ocr.spec.ts
frontend/: .dockerignore  Dockerfile  (+8 more)
(+91 files in other folders)
