[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap-backend"
version = "0.1.0"
description = "Multimodal AI Intelligence Platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jugal Gajjar" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "bcrypt>=4.2,<5.0",
    "pyjwt>=2.10,<3.0",
    "minio>=7.2,<8.0",
    "arq>=0.26,<1.0",
    "redis>=5.0,<6.0",
    "slowapi>=0.1.9,<1.0",
    "qdrant-client>=1.12,<2.0",
    "sentence-transformers>=3.3,<5.0",
    "groq>=0.20",
    "neo4j>=5.20,<6.0",
    "langgraph>=0.2,<1.0",
    "prometheus-client>=0.21,<1.0",
    "python-json-logger>=3.2,<4.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1.0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

# Heavy OCR deps for the worker container only. Kept out of the API image.
worker = [
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "Pillow>=11.0",
    "rapidocr>=2.0",
    "onnxruntime>=1.18",
    "numpy>=1.26,<2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Session-scoped event loop so async tests share the asyncpg pool;
# function-scoped loops cause "Event loop is closed" when reusing connections.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers"
markers = [
    "integration: needs docker compose stack running (skipped by default in unit mode)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
